unpackaged/main/default/objects/Order/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>