unpackaged/main/default/objects/Order/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly Recurring Revenue</description>
    <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>