unpackaged/main/default/objects/Order/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <description>Net Revenue Retention</description>
    <inlineHelpText>Net Revenue Retention</inlineHelpText>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>