unpackaged/main/default/objects/Order/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <label>Number Of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>