unpackaged/main/default/objects/Order/recordTypes/Arthur_Monthly_Order.recordType-meta.xml
<RecordType>
    <fullName>Arthur_Monthly_Order</fullName>
    <active>true</active>
    <label>Arthur Monthly Order</label>
</RecordType>